--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src="images/GitHub-Mark.png" alt="Avatar" class="image">
         <div class="overlay">
             <div class="text">
-                <h1 class="title white">
+                <h1 class="title blue">
                     Hello Github!
                 </h1>
                 <p>your-name</p>
